修改注释文案

--- a/resetPc.scss
+++ b/resetPc.scss
@@ -255,7 +255,7 @@ html{
     // 根据项目实际需求定制默认字体颜色
     color:#333;
 
-    // 根据项目实际需求，限制页面大小，防止变形
+    // 根据项目实际需求，限制页面大小，防止页面排版变形
     body{
         min-width:1366px;
         max-width:1920px;
