--- a/resetPc.scss
+++ b/resetPc.scss
@@ -53,9 +53,11 @@ audio,
 small,
 video,
 button,
+select,
 canvas,
 strong,
 address,
+textarea,
 progress{
     display:inline-block;
 }
@@ -159,6 +161,13 @@ input[type="submit"],
 input[type="button"],
 input[type="checkbox"]{
     cursor:pointer;
+}
+/* 分割线 */
+input:disabled,
+button:disabled,
+select:disabled,
+textarea:disabled{
+    cursor:not-allowed;
 }
 /* 分割线 */
 legend,
