--- a/src/resetPc.scss
+++ b/src/resetPc.scss
@@ -13,7 +13,7 @@
 
 
 
-/**********  盒子模型  开始**********/
+// 盒子模型
 *{
     &,
     &:before,
@@ -21,11 +21,10 @@
         box-sizing:border-box;
     }
 }
-/**********  盒子模型  结束**********/
 
 
 
-/**********  根元素标签  开始**********/
+// 根元素
 html{
     font:14px/1.5 "Microsoft YaHei";
 }
@@ -37,7 +36,7 @@ body{
 
 
 
-/**********  行内元素统一行块  开始**********/
+// 行内元素统一行块
 a,
 b,
 i,
@@ -62,11 +61,10 @@ textarea,
 progress{
     display:inline-block;
 }
-/**********  行内元素统一行块  结束**********/
 
 
 
-/**********  html5标签  开始**********/
+// html5
 nav,
 main,
 menu,
@@ -82,11 +80,10 @@ summary,
 figcaption{
     display:block;
 }
-/**********  html5标签  结束**********/
 
 
 
-/**********  标题标签  开始**********/
+// 标题
 p,
 h1,
 h2,
@@ -100,11 +97,10 @@ h6{
 pre{
     margin:0;
 }
-/**********  标题标签  结束**********/
 
 
 
-/**********  强调标签  开始**********/
+// 强调
 i,
 em,
 dfn,
@@ -124,21 +120,19 @@ abbr[title]{
     text-decoration:none;
     cursor:pointer;
 }
-/**********  强调标签  结束**********/
 
 
 
-/**********  上标、下标标签  开始**********/
+// 上标、下标
 sub,
 sup{
     line-height:1;
     font-size:12px;
 }
-/**********  上标、下标标签  结束**********/
 
 
 
-/**********  表单标签  开始**********/
+// 表单
 input,
 button,
 select,
@@ -176,11 +170,10 @@ select:disabled,
 textarea:disabled{
     cursor:not-allowed;
 }
-/**********  表单标签  结束**********/
 
 
 
-/**********  列表标签  开始**********/
+// 列表
 dl,
 dd{
     margin:0;
@@ -190,11 +183,10 @@ ul{
     margin:0;padding:0;
     list-style:none;
 }
-/**********  列表标签  结束**********/
 
 
 
-/**********  表格标签  开始**********/
+// 表格
 table{
     border-collapse:collapse;
     border-spacing:0;
@@ -204,11 +196,10 @@ td{
     padding:0;
     font-weight:normal;
 }
-/**********  表格标签  结束**********/
 
 
 
-/**********  链接、分割线、图片标签  开始**********/
+// 链接、分割线、图片
 a{
     text-decoration:none;
     color:inherit;
@@ -223,10 +214,9 @@ img{
 hr{
     margin:0;
 }
-/**********  链接、分割线、图片标签  结束**********/
 
 
-/**********  浮动、清除浮动  开始**********/
+// 浮动、清除浮动
 @mixin clearFix{
     &:after{
         display:block;
@@ -248,4 +238,3 @@ hr{
 .fr{
     float:right;
 }
-/**********  浮动、清除浮动  结束**********/
