--- a/src/resetMobile.scss
+++ b/src/resetMobile.scss
@@ -13,7 +13,7 @@
 
 
 
-/**********  盒子模型  开始**********/
+// 盒子模型
 *{
     &,
     &:before,
@@ -22,11 +22,10 @@
         -webkit-tap-highlight-color:transparent;
     }
 }
-/**********  盒子模型  结束**********/
 
 
 
-/**********  根元素标签  开始**********/
+// 根元素
 html{
     font:50px/1.5 sans-serif;
 }
@@ -35,11 +34,10 @@ body{
     margin:0;
     font-size:0.28rem;
 }
-/**********  根元素标签  结束**********/
 
 
 
-/**********  行内元素统一行块  开始**********/
+// 行内元素统一行块
 a,
 b,
 i,
@@ -64,31 +62,10 @@ textarea,
 progress{
     display:inline-block;
 }
-/**********  行内元素统一行块  结束**********/
 
 
 
-/**********  html5标签  开始**********/
-nav,
-main,
-menu,
-aside,
-figure,
-footer,
-header,
-hgroup,
-article,
-details,
-section,
-summary,
-figcaption{
-    display:block;
-}
-/**********  html5标签  结束**********/
-
-
-
-/**********  标题标签  开始**********/
+// 标题
 p,
 h1,
 h2,
@@ -102,11 +79,10 @@ h6{
 pre{
     margin:0;
 }
-/**********  标题标签  结束**********/
 
 
 
-/**********  强调标签  开始**********/
+// 强调
 i,
 em,
 dfn,
@@ -125,21 +101,19 @@ abbr[title]{
     border-bottom:none;
     text-decoration:none;
 }
-/**********  强调标签  结束**********/
 
 
 
-/**********  上标、下标标签  开始**********/
+// 上标、下标
 sub,
 sup{
     line-height:1;
     font-size:12px;
 }
-/**********  上标、下标标签  结束**********/
 
 
 
-/**********  表单标签  开始**********/
+// 表单
 input,
 button,
 select,
@@ -158,23 +132,23 @@ fieldset,
 blockquote{
     margin:0;padding:0;
 }
-/**********  表单标签  结束**********/
 
 
 
-/**********  列表标签  开始**********/
-dl,dd{
+// 列表
+dl,
+dd{
     margin:0;
 }
-ol,ul{
+ol,
+ul{
     margin:0;padding:0;
     list-style:none;
 }
-/**********  列表标签  结束**********/
 
 
 
-/**********  表格标签  开始**********/
+// 表格
 table{
     border-collapse:collapse;
     border-spacing:0;
@@ -184,11 +158,10 @@ td{
     padding:0;
     font-weight:normal;
 }
-/**********  表格标签  结束**********/
 
 
 
-/**********  链接、分割线、图片标签  开始**********/
+// 链接、分割线、图片
 a{
     text-decoration:none;
     color:inherit;
@@ -203,4 +176,3 @@ img{
 hr{
     margin:0;
 }
-/**********  链接、分割线、图片标签  结束**********/
